--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r backend/requirements.txt
 
       - name: Check code style
         run: |
@@ -30,8 +30,8 @@ jobs:
 
       - name: Run migrations
         run: |
-          python manage.py migrate
+          python backend/manage.py migrate
 
       - name: Check setup
         run: |
-          python manage.py check
+          python backend/manage.py check
