--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: List files in the directory
+        run: ls -la  
+        
       - name: Install dependencies
         run: |
           pip install --upgrade pip
